<resources>
    <string name="app_name">OrderingManager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_logo">OrdeRing 매장관리시스템</string>
    <string name="auth_info">본인 인증</string>
    <string name="auth_errorcode">인증번호가 일치하지 않습니다.</string>
    <string name="auth_phoneNum">휴대폰 번호</string>
    <string name="signup_nickname"><u>다시 선택</u></string>
    <string name="NicknameErrorText">닉네임은 3글자 이상 입력해 주세요</string>
    <string name="NicknameSubText">닉네임</string>
    <string name="PhoneNumberSubText">휴대폰 번호</string>
    <string name="OrderingMainText">OrdeRing</string>
    <string name="MemberIdSubText">아이디</string>
    <string name="memberIdErrorText">아이디는 5~20자의 영문 소문자와 숫자만 사용 가능합니다.</string>

    <string name="PasswordSubText">비밀번호</string>
    <string name="PasswordCheckSubText">비밀번호 확인</string>
    <string name="PasswordErrorText">비밀번호를 6자이상 입력해 주세요.</string>
    <string name="PasswordCheckErrorText">비밀번호가 일치하지 않습니다.</string>
    <string name="NicknameGuideText">닉네임이 마음에 들지 않으면 다시 선택하거나 직접 입력할 수 있어요.</string>
    <string name="SignupButtonText">회원가입</string>
    <string name="dialogTitleText">등록된 매장이 없습니다.</string>
    <string name="dialogButtonText">매장 등록하기</string>
    <string name="ErrorMsg_404">404 Not Found</string>
    <string name="errorNotFound">매장 정보를 불러오는데 오류가 발생했습니다.\n앱을 종료 후 다시 실행하시거나\n페이지를 새로고침 하십시오.</string>
    <string name="createQRMainText">매장에서 사용될 QR코드를 생성중입니다.</string>
    <string name="memberIdSubText">아이디</string>
    <string name="menu_action_all_down">All down</string>
    <string name="menu_action_up_down">Up down</string>
    <string name="menu_action_up_down_stack">Up down stack</string>
    <string name="address_number">우편번호</string>
    <string name="road_address">도로명 주소</string>
    <string name="detail_address">상세주소</string>
    <string name="owner_name">사업자명</string>
    <string name="address">주소</string>
    <string name="store_type">매장 종류</string>
    <string name="store_name">매장명/상호명</string>
    <string name="info_main_1">OrdeRing을 시작하기 전,</string>
    <string name="info_main_2">매장 정보를 입력해주세요 !</string>
    <string name="ordering">OrdeRing</string>
    <string name="info_search_address">주소 검색</string>
    <string name="info_only_takeout">포장만 가능</string>
    <string name="info_allowall">매장 식사, 포장 가능</string>
    <string name="info_category">음식 카테고리를 선택해 주세요. (최대 1개)</string>
    <string name="info_table_count">테이블 수</string>
    <string name="start">START</string>
    <string name="edit_store_info_toolbar_text">매장정보수정</string>
    <string name="category_korean_food">한식</string>
    <string name="categoty_bunsik">분식</string>
    <string name="category_cafe_dessert">카페 / 디저트</string>
    <string name="category_chicken">치킨</string>
    <string name="category_japanese_food">돈까스 / 회 / 초밥</string>
    <string name="category_pizza">피자</string>
    <string name="category_asian">아시안 / 양식</string>
    <string name="category_chinese">중식</string>
    <string name="category_jokbal">족발 / 보쌈</string>
    <string name="category_jjim">찜 / 탕</string>
    <string name="category_fast_food">패스트푸드</string>
    <string name="error_refresh">새로고침</string>
    <string name="qr_takeout">기다리지 말고\nQR 찍고 포장 주문하세요</string>
    <string name="qr_waiting">줄 서지 말고\nQR 찍고 대기 등록하세요</string>
    <string name="qr_table">테이블에서\nQR 찍고 주문하세요</string>
    <string name="custom_dialog_title_text">QR코드 이미지를 모두 다운로드 하시겠습니까?</string>
    <string name="custom_dialog_message_text">다운로드 버튼을 누르면 기기에 모든 이미지가 저장됩니다.</string>
    <string name="msg_token_fmt">토큰 : %s</string>

    //캘린더
    <string-array name="custom_weekdays">
        <item>월</item>
        <item>화</item>
        <item>수</item>
        <item>목</item>
        <item>금</item>
        <item>토</item>
        <item>일</item>
    </string-array>

    <string-array name="custom_months">
        <item>1월</item>
        <item>2월</item>
        <item>3월</item>
        <item>4월</item>
        <item>5월</item>
        <item>6월</item>
        <item>7월</item>
        <item>8월</item>
        <item>9월</item>
        <item>10월</item>
        <item>11월</item>
        <item>12월</item>
    </string-array>


</resources>