<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/storeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="44dp"
        android:text="@string/store_name"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input_storeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="#E1695E"
        android:ems="7"
        android:inputType="text"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/storeName"
        tools:ignore="Autofill,LabelFor" />

    <TextView
        android:id="@+id/tv_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/address"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_userName" />


    <LinearLayout
        android:id="@+id/ll_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_address"
        tools:context=".InfoActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_address_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:hint="@string/address_number"
                android:inputType="number"
                android:textColor="#000000"
                android:textColorHint="@color/et_hint"
                android:textSize="16sp"
                tools:ignore="Autofill" />

            <Button
                android:id="@+id/btn_location"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/button_round_rectangle_background"
                android:outlineSpotShadowColor="#C85C5C"
                android:text="@string/info_search_address"
                android:textColor="#C85C5C"
                tools:ignore="UnusedAttribute" />


        </LinearLayout>

        <EditText
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:enabled="false"
            android:hint="@string/road_address"
            android:textColor="#000000"
            android:textColorHint="@color/et_hint"
            android:textSize="16sp"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/et_address_detail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:hint="@string/detail_address"
            android:inputType="text"
            android:textColor="#000000"
            android:textColorHint="@color/et_hint"
            android:textSize="16sp"
            tools:ignore="Autofill" />
    </LinearLayout>

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/owner_name"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_storeName" />


    <EditText
        android:id="@+id/input_userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="#E1695E"
        android:ems="7"
        android:inputType="text"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/tv_howtoeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/store_type"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_address" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#E1695E"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ll_address"
        app:layout_constraintTop_toBottomOf="@+id/tv_howtoeat">

        <RadioButton
            android:id="@+id/radio_button_onlydeliver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:buttonTint="#E1695E"
            android:text="@string/info_only_takeout"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <RadioButton
            android:id="@+id/radio_button_both"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:buttonTint="#E1695E"
            android:text="@string/info_allowall"
            android:textColor="@color/black"
            android:textSize="13sp" />


    </RadioGroup>

    <TextView
        android:id="@+id/Kategorie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:text="@string/info_category"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tablenum" />

    <TextView
        android:id="@+id/tablenumtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/info_table_count"
        android:textColor="#000000"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/radio_group"
        app:layout_constraintTop_toBottomOf="@+id/radio_group" />


    <EditText
        android:id="@+id/tablenum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:backgroundTint="#E1695E"
        android:ems="3"
        android:gravity="center"
        android:inputType="number"
        android:textColor="#000000"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tablenumtext"
        app:layout_constraintTop_toBottomOf="@+id/radio_group"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="Autofill" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:background="#AFAEAE"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/Kategorie"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tablenum" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:background="#AFAEAE"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Kategorie"
        app:layout_constraintTop_toBottomOf="@id/tablenum" />

</androidx.constraintlayout.widget.ConstraintLayout>
